[gd_scene load_steps=2 format=3 uid="uid://bn3ejoudgfx7e"]

[ext_resource type="Script" uid="uid://djewsdlklc78y" path="res://scripts/ui/dialogue_record.gd" id="1_jj4gj"]

[node name="DialogueRecord" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -22.0
offset_right = 150.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_jj4gj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CharacterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.972549, 0.9647059, 0.8039216, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "f"

[node name="TextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.972549, 0.9647059, 0.8039216, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
theme_override_font_sizes/bold_italics_font_size = 18
theme_override_font_sizes/italics_font_size = 18
theme_override_font_sizes/mono_font_size = 18
bbcode_enabled = true
text = "XDDDDD dasd asd asd asd asd asd"
fit_content = true
